syntax = "proto3";

package pb;
option go_package = "github.com/vbph/bank/pb";

import "auth_signUp.proto";
import "auth_login.proto";

service Bank {
  rpc SignUp(SignUpReq) returns (SignUpRes) {}
  rpc Login(LoginReq) returns (LoginRes) {}
}
